# ocaml-bitarray

./: dune-project
examples/: dune  simple.ml
lib/: bitarray.ml  bitarray.mli  dune
lib_gen/: bitarray_bindgen.ml  dune
lib_test/: bench_obitarray.ml  dune
