(executable
 (modes byte exe)
 (name test_bitarray)
 (libraries bitarray alcotest)
 (modules test_bitarray))

(executable
 (modes byte exe)
 (name bench_obitarray)
 (public_name bench_obitarray)
 (libraries bitarray core core_bench)
 (modules bench_obitarray))

(rule
 (alias runtest)
 (deps
  (:< test_bitarray.exe))
 (action
  (run %{<})))
